deployment/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: timgrohmann/it-app:1.0.4
          imagePullPolicy: Always
          name: it-app
      restartPolicy: Always
